# HamonEngine

./: .gitignore  .gitmodules  LICENSE  README.md
libs/config/: CMakeLists.txt
libs/config/include/hamon/: config.hpp
libs/config/include/hamon/config/: architecture.hpp  prefix.hpp  select_compiler_config.hpp  select_platform_config.hpp  select_stdlib_config.hpp  suffix.hpp  user.hpp
libs/config/include/hamon/config/architecture/: alpha.hpp  arm.hpp  blackfin.hpp  convex.hpp  ia64.hpp  m68k.hpp  mips.hpp  parisc.hpp  ppc.hpp  pyramid.hpp  rs6k.hpp  sparc.hpp  superh.hpp  sys370.hpp  sys390.hpp  x86.hpp  z.hpp
libs/config/include/hamon/config/compiler/: apple_clang.hpp  clang.hpp  gcc.hpp  msvc.hpp
libs/config/include/hamon/config/platform/: linux.hpp  macos.hpp  win32.hpp
libs/config/include/hamon/config/stdlib/: dinkumware.hpp  libcpp.hpp  libstdcpp3.hpp
libs/config/include/hamon/config/suffix/: alignas.hpp  alignof.hpp  carries_dependency.hpp  constexpr.hpp  current_function.hpp  deprecated.hpp  endian.hpp  extern_template.hpp  fallthrough.hpp  final.hpp  inline_var.hpp  likely.hpp  no_unique_address.hpp  nodiscard.hpp  noexcept.hpp  noreturn.hpp  override.hpp  pragma.hpp  unreachable.hpp  warning.hpp
libs/config/test/: CMakeLists.txt
libs/config/test/src/: unit_test_config.cpp  unit_test_config_alignas.cpp  unit_test_config_alignof.cpp  unit_test_config_carries_dependency.cpp  unit_test_config_constexpr.cpp  unit_test_config_current_function.cpp  unit_test_config_cxx11.cpp  unit_test_config_cxx14.cpp  unit_test_config_cxx17.cpp  unit_test_config_cxx20.cpp  unit_test_config_deprecated.cpp  unit_test_config_extern_template.cpp  unit_test_config_fallthrough.cpp  unit_test_config_final.cpp  unit_test_config_likely.cpp  unit_test_config_nodiscard.cpp  unit_test_config_noexcept.cpp  unit_test_config_noreturn.cpp  unit_test_config_override.cpp
libs/render/: CMakeLists.txt
libs/render/include/hamon/: render.hpp
libs/render/include/hamon/render/: blend_factor.hpp  blend_operation.hpp  blend_state.hpp  border_color.hpp  clear_value.hpp  color_write_mask.hpp  compare_operation.hpp  comparison_func.hpp  cull_mode.hpp  d3d11_renderer.hpp  d3d12_renderer.hpp  depth_stencil_state.hpp  fill_mode.hpp  filter_mode.hpp  front_face.hpp  geometry.hpp  gl_renderer.hpp  index_type.hpp  logic_operation.hpp  mipmap_mode.hpp  opengl_renderer.hpp  primitive_topology.hpp  program.hpp  rasterizer_state.hpp  render_pass_state.hpp  render_state.hpp  renderer.hpp  sampler.hpp  sampler_address_mode.hpp  scissor_state.hpp  semantic.hpp  shader.hpp  shader_language.hpp  shader_stage.hpp  stencil_operation.hpp  texture.hpp  texture_format.hpp  type.hpp  uniforms.hpp  vertex_attribute.hpp  (+3 more)
libs/render/include/hamon/render/d3d/: com_ptr.hpp  d3d11.hpp  d3d11shader.hpp  d3d12.hpp  d3d12shader.hpp  d3dcompiler.hpp  dxgi.hpp  dxgi_factory.hpp  dxgi_swap_chain.hpp  throw_if_failed.hpp
libs/render/include/hamon/render/d3d11/: blend_factor.hpp  blend_operation.hpp  blend_state.hpp  border_color.hpp  buffer.hpp  color_write_mask.hpp  compare_operation.hpp  comparison_func.hpp  constant_buffer.hpp  cull_mode.hpp  d3d11_renderer.hpp  d3d11_renderer_inl.hpp  depth_stencil_state.hpp  device.hpp  device_context.hpp  fill_mode.hpp  filter_mode.hpp  geometry.hpp  index_buffer.hpp  index_type.hpp  logic_operation.hpp  primitive_topology.hpp  program.hpp  rasterizer_state.hpp  render_target_view.hpp  resource_map.hpp  sampler.hpp  sampler_address_mode.hpp  shader.hpp  shader_reflection.hpp  stencil_operation.hpp  texture.hpp  texture_format.hpp  vertex_buffer.hpp
libs/render/include/hamon/render/d3d12/: blend_factor.hpp  blend_operation.hpp  blend_state.hpp  border_color.hpp  color_write_mask.hpp  command_allocator.hpp  command_list.hpp  command_queue.hpp  compare_operation.hpp  comparison_func.hpp  constant_buffer.hpp  constant_buffer_descriptor.hpp  cull_mode.hpp  d3d12_renderer.hpp  d3d12_renderer_inl.hpp  depth_stencil_state.hpp  descriptor_heap.hpp  device.hpp  fence.hpp  fill_mode.hpp  filter_mode.hpp  geometry.hpp  index_buffer.hpp  index_type.hpp  input_layout.hpp  logic_operation.hpp  pipeline_state.hpp  primitive_topology.hpp  primitive_topology_type.hpp  program.hpp  rasterizer_state.hpp  render_target_view.hpp  resource.hpp  resource_map.hpp  root_signature.hpp  sampler.hpp  sampler_address_mode.hpp  sampler_descriptor.hpp  shader.hpp  shader_reflection.hpp  (+6 more)
libs/render/include/hamon/render/detail/: hash_combine.hpp  identifiable.hpp  identifier.hpp  index_array.hpp  pixels.hpp  uniform.hpp
libs/render/include/hamon/render/gl/: blend_factor.hpp  blend_operation.hpp  blend_state.hpp  border_color.hpp  buffer.hpp  clear_value.hpp  compare_operation.hpp  comparison_func.hpp  context.hpp  cull_mode.hpp  depth_stencil_state.hpp  fill_mode.hpp  filter_mode.hpp  front_face.hpp  geometry.hpp  gl.hpp  (+22 more)
libs/render/samples/: CMakeLists.txt
libs/render/samples/clear/: CMakeLists.txt  sample_render_clear_main.cpp
libs/render/samples/color_write_mask/: CMakeLists.txt  sample_render_color_write_mask_main.cpp
libs/render/samples/cull_mode/: CMakeLists.txt  sample_render_cull_mode_main.cpp
libs/render/samples/fill_mode/: CMakeLists.txt  sample_render_fill_mode_main.cpp
libs/render/samples/indexed/: CMakeLists.txt  sample_render_indexed_main.cpp
libs/render/samples/primitive_topology/: CMakeLists.txt  sample_render_primitive_topology_main.cpp
libs/render/samples/scissor/: CMakeLists.txt  sample_render_scissor_main.cpp
libs/render/samples/texture/: CMakeLists.txt  sample_render_texture_main.cpp
libs/render/samples/triangle/: CMakeLists.txt  sample_render_triangle_main.cpp
libs/render/samples/uniform/: CMakeLists.txt  sample_render_uniform_main.cpp
libs/render/samples/viewport/: CMakeLists.txt  sample_render_viewport_main.cpp
libs/window/: CMakeLists.txt  CMakePresets.json  README.md
libs/window/include/hamon/: window.hpp
libs/window/include/hamon/window/: window.hpp
libs/window/samples/: CMakeLists.txt
libs/window/samples/window/: CMakeLists.txt  sample_window_window_main.cpp
(+120 files in other folders)
